Import of SILASMONK/Test-Regression-0.03 from CPAN.
gitpan-cpan-distribution: Test-Regression
gitpan-cpan-version:      0.03
gitpan-cpan-path:         SILASMONK/Test-Regression-0.03.tar.gz
gitpan-cpan-author:       SILASMONK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -5,3 +5,6 @@ Revision history for Test-Regression
 
 0.02	13-09-2009
 	Headline documentation error. Fixed t/changes.t and t/manifest.t
+
+0.03 	20-09-2009
+	Added more dependencies and license
