Import of SILASMONK/Test-Regression-0.04 from CPAN.
gitpan-cpan-distribution: Test-Regression
gitpan-cpan-version:      0.04
gitpan-cpan-path:         SILASMONK/Test-Regression-0.04.tar.gz
gitpan-cpan-author:       SILASMONK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -8,3 +8,6 @@ Revision history for Test-Regression
 
 0.03 	20-09-2009
 	Added more dependencies and license
+
+0.04 	28-09-2009
+	Various documentation changes
