Import of MITHALDU/Test-Regression-0.07 from CPAN.
gitpan-cpan-distribution: Test-Regression
gitpan-cpan-version:      0.07
gitpan-cpan-path:         MITHALDU/Test-Regression-0.07.tar.gz
gitpan-cpan-author:       MITHALDU
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -20,3 +20,6 @@ Revision history for Test-Regression
 0.06    19-11-2010
         Switched to binmode for better portability (rt60638).
         Thank to Christian Walde. Also switched to utf8 format for code.
+
+0.07    11-07-2013
+        Marked more tests as author tests to avoid bogus fails.
